# Mixture-of-Doctors

./: .gitignore  .pre-commit-config.yaml  README.md  config.json  deploy.sh  justfile  main.py  pyproject.toml  redeploy.sh  undeploy.sh
.github/workflows/: ci.yml
chat-history/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
chat-history/src/chat_history/: __init__.py  api.py  collection_model.py  database.py  main.py  mongoUI.py  services.py
chat-history/src/chat_history/endpoints/: requests.py
chat-history/src/chat_history/models/: request.py
chat-history/src/chat_history/services/: request_service.py
chat-history/test/: test_database.py
chat-history/tests/: conftest.py  test_api.py  test_integration.py  test_services.py
frontend/cli/: .env.example  Dockerfile  pyproject.toml  requirements.txt
frontend/cli/src/: connection.py
frontend/cli/src/cli/: __init__.py  chat_history_client.py  cli.py  client.py  main.py  repl.py  stream_client.py  typer_config.py
frontend/cli/test/: test_connection.py
frontend/cli/tests/: conftest.py  test_chat_history_client.py  test_stream_client.py
infrastructure/: .env  .env.example  docker-compose.yml  env.txt  init-scripts_create-topics.sh  start.sh
infrastructure/kafka/: .env.example  config.json  docker-compose.yml  start.sh
infrastructure/kafka/scripts/: create-topics.sh
infrastructure/nginx/: deploy-nginx.sh  docker-compose.yml  nginx.conf
infrastructure/redis/: .env.example  docker-compose.yml
orchestrator/: .env.example  Dockerfile  deploy-orchestrator.sh  deploy-swarm.sh  docker-compose.yml  pyproject.toml  requirements.txt
orchestrator/prompts/: easy_queries.md  planning.md
orchestrator/src/orchestrator/: __init__.py  api.py  client.py  configurations.py  doctors.py  exceptions.py  main.py  orchestrator.py  planner.py  planning.py  server.py  utilities.py  websocket_server.py
orchestrator/src/orchestrator/prompts/: classification.md  easy_queries.md  planning.md
orchestrator/tests/: conftest.py  test_actions.py  test_integration.py  test_planning.py
rag-module/: .env.example  Dockerfile  config.json  docker-compose.yml  pyproject.toml  requirements.txt
rag-module/ingestion/: Dockerfile  ingest_pubmed.py  requirements.txt  start.sh  stop.sh
rag-module/prompts/: rag_module.md
rag-module/scripts/: ingest_pubmed.py  start.sh
rag-module/src/rag_module/: __init__.py  kafka_client.py  main.py  rag_module.py  rag_process.py  utilities.py
rag-module/tests/: __init__.py  conftest.py  test_kafka_client.py  test_rag_process.py
scripts/: deploy.sh  deploy_utils.sh  ingest_rag_data.sh  redeploy.sh  setup_envs.example.sh  undeploy.sh
shared/: .env.example  pyproject.toml
shared/src/shared/: broker.py  llm.py
synthesizer/: .env.example  Dockerfile  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
synthesizer/src/synthesizer/: __init__.py  main.py  synthesis.py  utilities.py
synthesizer/src/synthesizer/prompts/: synth_prompt.md
synthesizer/test/: test_synthesis.py
synthesizer/tests/: conftest.py  test_integration.py  test_query_handling.py  test_synthesis.py
