[project]
name = "mixture-of-doctors"
version = "0.1.0"
description = "An agentic-RAG system for self-management of chronic diseases"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
]

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

[tool.uv.workspace]
members = ["orchestrator", "chat-history", "frontend/cli", "rag-module", "synthesizer"]