[project]
name = "rag-module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lucia Castellucci", email = "lucia.castellucci2@studio.unibo.it" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "dotenv>=0.9.9",
    "groq>=0.21.0",
    "kafka>=1.3.5",
    "loguru>=0.7.3",
    "pydantic>=2.11.1",
    "qdrant-client>=1.13.3",
    "redis>=5.2.1",
    "sentence-transformers==3.4.1",
]

[project.scripts]
rag-module = "rag_module:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
