[project]
name = "synthesizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Roberto Mitugno", email = "roberto.mitugno@studio.unibo.it" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
synthesizer = "synthesizer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
