[project]
name = "synthesizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Roberto Mitugno", email = "roberto.mitugno@studio.unibo.it" }
]
requires-python = ">=3.13"
dependencies = [
    "aiokafka>=0.12.0",
    "dotenv>=0.9.9",
    "groq>=0.22.0",
    "kafka-python>=2.0.6",
    "loguru>=0.7.3",
    "redis>=5.2.1",
]

[project.scripts]
synthesizer = "synthesizer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
